                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------

#======
1.2.2 -> 1.2.2 dev
#======
1.2.1 -> 1.2.2
- Bug fix for DivisorsOfElementInNumericalSemigroup(0,s).
- Bug fix in proportionally modular affine semigroups of dimenstion two
- Added IsSubset for ideals of numerical semigroups
- Disabled GradedModules

#=======
1.2.0 -> 1.2.1
- Changes in tests to fit new version of gapdays
- Code for ideals of affine semigroups by Helena Martin Cruz

#=======
1.1.0 -> 1.2.0 * brief summary *
* This is just a summary of the changes made from the major release 1.1.0 to the major release 1.2.0.
* For details, please check the lists of changes between minor releases below.
- Many small fixes and slight improvements (both in the code and in the manual).
- Many functions added (in particular some for affine and good semigroups (especially for generalized numerical semigroups - contributions of Carmelo Cisto, and for good semigroups - contributions of Nicola Maugeri))
- Travis & Codecov support added (great help of Max Horn in this and other aspects).
- The list of contributors has increased and has been updated.
- Great improvement of the critical functions 'AperyList' (thanks Chris O'Neill) and 'SmallElements': this led to a considerable speedup of numerous functions in the package.
- Added several shortnames.
- Globally profound revision of the manual.
- Several functions marked as obsolet and finally removed.
#=======

1.1.11 -> 1.1.11 dev
- New implementation of AperyListOfNumericalSemigroupWRTElement by Chris O'Neill (this affects the speed of many other functions in the package)
- added WittCoefficients for a univariate polynomial
- added several functions for good semigroups implemented by Nicola Maugeri
- Code coverage improved

1.1.10 -> 1.1.11
- various small fixes and improvements