@@ -4,6 +4,7 @@
 
 #======
 1.2.2 -> 1.2.2 dev
+- Added IsComplementOfIntegralIdeal and IdealByDivisorClosedSet
 #======
 1.2.1 -> 1.2.2
 - Bug fix for DivisorsOfElementInNumericalSemigroup(0,s).
